<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textColor="@color/app_name_color"
        android:textSize="48sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <EditText
                android:id="@+id/edit_account"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/account_hint"
                android:textColor="@android:color/black"
                android:textColorHint="@color/alpha_20_black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_delete_account"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:src="@drawable/delete" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textColorHint="@color/alpha_20_black"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/img_hide_password"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                android:src="@drawable/hide_password" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/corner_5_dp_bg"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/forget_password_text"
            android:textColor="@color/login_bg_color" />
    </LinearLayout>


</LinearLayout>
