<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_tab" />

    <LinearLayout
        android:id="@+id/bottom_tab"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/alpha_10_black"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/chat_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/chat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="3dp"
                    android:src="@drawable/chat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat_text"
                    android:textColor="@color/alpha_50_black"
                    android:textSize="10dp" />
            </LinearLayout>

            <TextView
                android:layout_width="20dp"
                android:layout_height="15dp"
                android:layout_marginLeft="-10dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/chat"
                android:background="@drawable/corner_5_dp_red"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="1"
                android:textSize="10sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/address_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_address_tab"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"

                android:src="@drawable/address" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_text"
                android:textColor="@color/alpha_50_black"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/app_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_app_tab"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/app" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_text"
                android:textColor="@color/alpha_50_black"
                android:textSize="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mine_tab"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_mine_tab"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mine_text"
                android:textColor="@color/alpha_50_black"
                android:textSize="10dp" />
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
